--- a/Tasket/Dockerfile
+++ b/Tasket/Dockerfile
@@ -7,7 +7,8 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+
+RUN pip install --index-url=https://pypi.tuna.tsinghua.edu.cn/simple/ --no-cache-dir -r requirements.txt
 
 COPY . .
 
